# laminateoptimiser

./: .gitignore  AGENTS.md  CMakeLists.txt  plan.md
benchmarks/: CMakeLists.txt  calculix_composipy_benchmark_test.cpp  calculix_e2e_test.cpp  calculix_laminate_parameter_benchmark_test.cpp
docs/: e2e-user-example.md  sudo-codes.txt
examples/: CMakeLists.txt  mock_calculix_e2e.cpp
src/: CMakeLists.txt
src/BoundSDP/: boundSDP.cpp  boundSDP.hpp
src/Example1/: Child1Parent1.hpp  Child2Parent1.hpp  Parent1.hpp
src/GlobalOptimiser/: approxFunction.cpp  approxFunction.hpp  dampingUtils.hpp  globalOptimiser.cpp  globalOptimiser.hpp  scminmaxProb.cpp  scminmaxProb.hpp
src/InterfaceOptimiser/: dampingInterface.cpp  dampingInterface.hpp  responseInterface.cpp  responseInterface.hpp
src/LamFSDPCone/: lpfSDPCone.hpp
src/Laminate/: cltweight.cpp  cltweight.hpp  laminateSection.cpp  laminateSection.hpp  lpfeasible.cpp  lpfeasible.hpp  varsize.cpp  varsize.hpp
src/Miki/: Miki.cpp  Miki.hpp  MikiConeBase.hpp
src/OptimisationPipeline/: abaqusJobBackend.hpp  analysis.hpp  approximation.hpp  calculixBenchmarkSchemas.hpp  calculixComposipyBenchmark.hpp  calculixJobBackend.hpp  calculixLaminateParameterBenchmark.hpp  configuredSubproblemSolver.hpp  coreMinMaxSubproblem.hpp  defaultAnalysisBackend.hpp  defaultLaminateSubproblem.hpp  globalOptimisationDriver.hpp  jobBackend.hpp  laminateAwareSubproblem.hpp  laminateFeParameterisation.hpp  laminateParameterisedBackend.hpp  laminateSectionBinding.hpp  laminationParameterDerivatives.hpp  legacyMinMaxSubproblem.hpp  responseSchema.hpp  subproblem.hpp
src/SDPA/: SDPA.cpp  SDPA.hpp  SDPABase.hpp  SDPASolver.hpp  parameter.cpp  parameter.hpp  scalarSDP.cpp  scalarSDP.hpp
src/Section/: section.cpp  section.hpp  sectionBase.cpp  sectionBase.hpp
src/TestProblems/: designProblem1.cpp  designProblem1.hpp  solutionProblem1.cpp  solutionProblem1.hpp
src/fSDPCone/: fSDPCone.cpp  fSDPCone.hpp
tests/: CMakeLists.txt  LamFSDPCone_test.cpp  Miki_test.cpp  abaqus_backend_test.cpp  calculix_backend_test.cpp  dampingUtils_test.cpp  example1_test.cpp  fSDPCone_test.cpp  globalOptimiser_test.cpp  global_driver_test.cpp  laminate_fe_parameterisation_test.cpp  laminate_test.cpp  lamination_parameter_derivatives_test.cpp  miki_cone_test.cpp  minmaxprob_test.cpp  permutation_test.cpp  sdpa_test.cpp  section_test.cpp  thickness_test.cpp
tests/fixtures/abaqus/: results_success.txt
tests/fixtures/calculix/: results_success.txt
